--- a/E-Dashboard/front-end/src/App.css
+++ b/E-Dashboard/front-end/src/App.css
@@ -36,3 +36,56 @@
     transform: rotate(360deg);
   }
 }
+
+.navbar{
+  background-color: #282c34;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navbar ul li{
+  padding-left: 26px;
+}
+.navbar ul li a{
+  color: #fff;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+footer{
+  background-color: #282c34;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+}
+footer h3{
+  text-align: center;
+  color: #fff;
+  font-size: 26px;
+}
+form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; 
+}
+.inputBox{
+  display: block;
+  width: 380px;
+  margin: 5px 0;
+  padding: 8px 0 8px 6px;
+  border: 1px solid #282c34;
+  border-radius: 4px;
+  font-size: 18px;
+}
+button{
+  background-color: #282c34;
+  color: #fff;
+  padding: 10px 24px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: 20px;
+  font-size: 18px;
+}
